--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome to the Git Class</h1>
+    </header>
+    <main>
+        <p>This is the main content of the Git class webpage.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Git Class</p>
+    </footer>
+
 </body>
 </html>
